--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "location-voiture",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
     "fs": "^0.0.1-security",
